--- a/1.html
+++ b/1.html
@@ -16,15 +16,11 @@
             font-size: 24px;
             color: #333; /* 深灰色文字 */
         }
-        .heart {
-            color: red; /* 爱心颜色为红色 */
-            font-size: 24px; /* 爱心大小 */
-        }
     </style>
 </head>
 <body>
     <div>
-        <span class="heart">&#10084;</span> 小雨我爱你
+        小雨我爱你
     </div>
 </body>
 </html>
